proxy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mitmproxy
  namespace: proxy
spec:
  selector:
    app: mitmproxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
