proxy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-ingress
  namespace: proxy
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: "proxy.lab.qstetten.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mitmproxy
                port:
                  number: 80
